crates/sifr_python_parser/tests/snapshots/invalid_syntax@for_stmt_missing_iter.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/err/for_stmt_missing_iter.py
---
## AST

```
Module(
    ModModule {
        range: 0..20,
        body: [
            For(
                StmtFor {
                    range: 0..19,
                    is_async: false,
                    target: Name(
                        ExprName {
                            range: 4..5,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            range: 8..8,
                            id: "",
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Assign(
                            StmtAssign {
                                range: 14..19,
                                targets: [
                                    Name(
                                        ExprName {
                                            range: 14..15,
                                            id: "a",
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 18..19,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for x in:
  |         ^ Syntax Error: Expected an expression
2 |     a = 1
  |
